# amdtop

./: CMakeLists.txt  README.md
core/: 0001-temp.patch  CMakeLists.txt  amdgpu.ids  atombios.c  atombios.h  atomfirmwareid.h  drmhelper.c  drmhelper.h  gpudevice.c  gpudevice.h  gpudridebug.c  gpudridebug.h  gpuinfo.c  gpuinfo.h  gpumode.c  gpumode.h
core/import/: amdgpu_drm.h
core/test/: CMakeLists.txt  drmdebug.c  main.c  testdrmmode.c
tui/: CMakeLists.txt  aboutinfo.c  biosinfo.c  chipinfo.c  context.c  context.h  device.c  device.h  deviceinfo.c  devicewindow.c  displayinfo.c  driverinfo.c  fenceinfo.c  firmware.c  firmwareinfo.c  main.c  mainwindow.c  ringinfo.c  stateinfo.c  statuswindow.c  systeminfo.c  tabinfo.c  tabinfo.h  tabwindow.c  window.c  window.h  windows.h
tui/debian/: postinst
tui/import/: edid.h
tui/test/: CMakeLists.txt  xlibtest.c
utils/: CMakeLists.txt  list.h  utils.c  utils.h
